--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://kuluruvineeth.github.io/onspot",
+    "homepage": "https://kuluruvineeth.github.io/onspot",
     "name": "onspot",
     "version": "0.1.0",
     "private": true,
